--- a/Fleetman-position-tracker/pom.xml
+++ b/Fleetman-position-tracker/pom.xml
@@ -95,6 +95,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-couchbase</artifactId>
+			<version>3.2.9.RELEASE</version>
 		</dependency>
 
 		<dependency>
